--- a/package.json
+++ b/package.json
@@ -1,8 +1,27 @@
 {
   "name": "everyjs",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A lightweight and efficient utility library for JavaScript that provides a collection of essential functions for everyday programming tasks.",
+  "version": "0.0.1",
+  "author": "Gabriel Juninho Paulista <gabrieltobing789@gmail.com>",
+  "license": "MIT",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
+    },
+    "./ascii": {
+      "types": "./ascii/index.d.ts",
+      "import": "./ascii/index.mjs",
+      "require": "./ascii/index.js"
+    }
+  },
+  "files": [
+    "dist",
+    "src"
+  ],
   "scripts": {
     "start": "tsup --watch",
     "build": "tsup",
@@ -10,6 +29,8 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "prettier": "prettier --write .",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "check-types": "tsc --pretty --noEmit",
     "check-format": "prettier --check ."
   },
@@ -17,17 +38,18 @@
     "type": "git",
     "url": "git+ssh://git@github.com/EveryJS/everyjs.git"
   },
-  "author": "Gabriel Juninho Paulista <gabrieltobing789@gmail.com>",
-  "license": "ISC",
   "bugs": {
     "url": "https://github.com/EveryJS/everyjs/issues"
   },
   "homepage": "https://github.com/EveryJS/everyjs#readme",
   "devDependencies": {
     "@eslint/js": "^9.16.0",
+    "@types/jest": "^29.5.14",
     "eslint": "^9.16.0",
     "globals": "^15.12.0",
+    "jest": "^29.7.0",
     "prettier": "^3.4.1",
+    "ts-jest": "^29.2.5",
     "tsup": "^8.3.5",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.16.0"
