chore: rename package from everyjs to alwaysjs

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "everyjs",
+  "name": "alwaysjs",
   "description": "A lightweight and efficient utility library for JavaScript that provides a collection of essential functions for everyday programming tasks.",
   "version": "0.0.1",
   "author": "Gabriel Juninho Paulista <gabrieltobing789@gmail.com>",
